tests/golden/err-import-windowless/expected_error.txt
error: `./lib` は窓口 `_.clum` を持たないため公開名がありません
 --> ./_.clum:1:2
  |
1 | @./lib
  |  ^^^^^ ディレクトリの外へ差し出す名前は、窓口の `^@` ブロックに列挙します
